@@ -1,23 +1,12 @@
-- content_for :javascript do
-  :javascript
-    function submit_form() {
-      // Empty selected account value if the dropdown is not visible.
-      if (!$("account_id").visible()) {
-        var index = $("account_id").selectedIndex;
-        $("account_id")[index].value = "";
-      }
-      // Propagate contact[access] to the account and account[assigned_to] to the contact.
-      $("account_assigned_to").value = $F("contact_assigned_to");
-      $("contact_access").value = $F("account_access");
-    }
-
 - content_for :javascript_epilogue do
-  <script type="text/javascript">
-  - if !@account.id.blank?
-    crm.select_account();
-  - else
-    crm.create_account();
-  </script>
+  %script{:type => "text/javascript"}
+    :plain
+      function submit_form() {
+        // Propagate contact[access] to the account and account[assigned_to] to the contact.
+        $("account_assigned_to").value = $F("contact_assigned_to");
+        $("contact_access").value = $F("account_access");
+      }
+    = @account.id.blank? ? "crm.create_account();" : "crm.select_account();"
 
 .form
   - form_for(@lead, :url => promote_lead_path(@lead)) do |f|
