@@ -17,17 +17,15 @@ var crm = {
   //----------------------------------------------------------------------------
   create_account: function() {
     $("account_selector").update("(create new or <a href='#' onclick='crm.select_account(); return false;'>select existing</a>):");
-    $("account_id").hide();
-    $("account_name").show();
-    $("account_name").focus();
+    $("account_id").hide();  $("account_id").disable();
+    $("account_name").enable();  $("account_name").show();  $("account_name").focus();
   },
 
   //----------------------------------------------------------------------------
   select_account: function() {
     $("account_selector").update("(<a href='#' onclick='crm.create_account(); return false;'>create new</a> or select existing):");
-    $("account_id").show();
-    $("account_name").hide();
-    $("account_id").focus();
+    $("account_name").hide();  $("account_name").disable();
+    $("account_id").enable();  $("account_id").show();  $("account_id").focus();
   }
 
 
